{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 6,
  "lineage": "55ae7fe9-b253-8c82-153d-64c16bf57ff8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:343218219153:instance/i-02edfd301cf51119a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02edfd301cf51119a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04d37bc35e496bc4c"
              }
            ],
            "primary_network_interface_id": "eni-04d37bc35e496bc4c",
            "private_dns": "ip-172-31-36-249.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.249",
            "public_dns": "ec2-52-14-139-34.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.139.34",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c33d28f275ef339d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ssh-sg",
              "webs-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035d7aeca05e9f566",
            "tags": {
              "Name": "Alfiya",
              "sg_count": "2"
            },
            "tags_all": {
              "Name": "Alfiya",
              "sg_count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bdc99cbc037c385",
              "sg-0d0433c33d66b4de3"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:security-group/sg-08bdc99cbc037c385",
            "description": "Allow SSH",
            "egress": [],
            "id": "sg-08bdc99cbc037c385",
            "ingress": [],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "343218219153",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09beae8b49db20e76"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218219153:security-group/sg-0d0433c33d66b4de3",
            "description": "Allow HTTP",
            "egress": [],
            "id": "sg-0d0433c33d66b4de3",
            "ingress": [],
            "name": "webs-sg",
            "name_prefix": "",
            "owner_id": "343218219153",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09beae8b49db20e76"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}